--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,1 +1,45 @@
 @import '../../node_modules/bootstrap/dist/css/bootstrap.min.css';
+
+body {
+  background-color: #f5f5f5;
+}
+
+.card {
+  padding: 16px;
+  border: none;
+  box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.12);
+}
+
+.table {
+  vertical-align: middle;
+}
+
+.object-fit {
+  -o-object-fit: cover;
+  object-fit: cover;
+  max-width: 100%;
+}
+
+.card-img-top {
+  height: 250px;
+}
+
+.images {
+  width: 150px;
+  height: 150px;
+  margin-right: 8px;
+}
+
+.loading {
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  background-color: rgba(255, 255, 255, 0.25);
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+  z-index: 9999;
+  justify-content: center;
+  align-items: center;
+}
