--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -4,6 +4,20 @@ body {
   background-color: #f5f5f5;
 }
 
+.layout {
+  height: 520px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.nav li {
+  transition: 0.3s all;
+  &:hover {
+    opacity: 0.7;
+  }
+}
+
 .card {
   padding: 16px;
   border: none;
