--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,7 +1,9 @@
-@import '../../node_modules/bootstrap/dist/css/bootstrap.min.css';
-
 body {
-  background-color: #f5f5f5;
+  background-color: #EDF2FC;
+}
+
+header{
+  background-color: #ffffff;
 }
 
 .layout {
@@ -19,7 +21,7 @@ body {
 }
 
 .card {
-  padding: 16px;
+  padding: 32px;
   border: none;
   box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.12);
 }
@@ -56,4 +58,21 @@ body {
   z-index: 9999;
   justify-content: center;
   align-items: center;
+}
+
+.form-input-group{
+  display: grid;
+  gap: 28px;
+  margin-bottom: 16px;
+}
+
+.button.MuiButton-containedPrimary {
+  padding: 12px 16px;
+  background-color: #2e9cca;
+  opacity: .8;
+  transition: all .2s;
+  &:hover{
+    background-color: #2e9cca;
+    opacity: 1;
+  }
 }
