--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,8 +1,8 @@
 body {
-  background-color: #EDF2FC;
+  background-color: #edf2fc;
 }
 
-header{
+header {
   background-color: #ffffff;
 }
 
@@ -21,7 +21,7 @@ header{
 }
 
 .card {
-  padding: 32px;
+  padding: 24px;
   border: none;
   box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.12);
 }
@@ -60,7 +60,7 @@ header{
   align-items: center;
 }
 
-.form-input-group{
+.form-input-group {
   display: grid;
   gap: 28px;
   margin-bottom: 16px;
@@ -69,10 +69,32 @@ header{
 .button.MuiButton-containedPrimary {
   padding: 12px 16px;
   background-color: #2e9cca;
-  opacity: .8;
-  transition: all .2s;
-  &:hover{
+  opacity: 0.8;
+  transition: all 0.2s;
+  &:hover {
     background-color: #2e9cca;
     opacity: 1;
   }
+}
+
+.modal-header {
+  box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.12);
+}
+
+.modal-content {
+  background-color: #f5f5f5;
+  padding: 32px 0;
+}
+
+.text-field-group {
+  display: grid;
+  gap: 24px;
+}
+
+.image-size {
+  height: 250px;
+}
+
+.image-group {
+  gap: 16px;
 }
