--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,3 +1,4 @@
+@use './scss/components/button';
 @use './scss/components/card';
 @use './scss/components/modal';
 @use './scss/components/spinners';
@@ -36,19 +37,8 @@ header {
 
 .form-input-group {
   display: grid;
-  gap: 28px;
+  gap: 12px;
   margin-bottom: 16px;
-}
-
-.button.MuiButton-containedPrimary {
-  padding: 12px 16px;
-  background-color: #2e9cca;
-  opacity: 0.8;
-  transition: all 0.2s;
-  &:hover {
-    background-color: #2e9cca;
-    opacity: 1;
-  }
 }
 
 .text-field-group {
@@ -57,7 +47,7 @@ header {
 }
 
 .image-size {
-  height: 250px;
+  height: 200px;
 }
 
 .image-group {
