--- a/src/styles/scss/components/_spinners.scss
+++ b/src/styles/scss/components/_spinners.scss
@@ -10,4 +10,8 @@
   z-index: 9999;
   justify-content: center;
   align-items: center;
+  .spinner-border {
+    width: 48px;
+    height: 48px;
+  }
 }
