chore: organize style structure

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,18 @@
-// 客製化樣式
-@import './styles/main.scss';
+// bootstrap
+@import 'bootstrap/dist/css/bootstrap.min.css';
+// helpers
+@import '/src/styles/scss/helpers/variables';
+@import '/src/styles/scss/helpers/mixins';
+// base
+@import '/src/styles/scss/base/base';
+@import '/src/styles/scss/base/typography';
+// layout
+@import '/src/styles/scss/layout/content';
+// components
+@import '/src/styles/scss/components/navbar';
+@import '/src/styles/scss/components/button';
+@import '/src/styles/scss/components/card';
+@import '/src/styles/scss/components/modal';
+@import '/src/styles/scss/components/spinners';
+@import '/src/styles/scss/components/table';
+@import '/src/styles/scss/components/form';
