--- a/src/styles/scss/components/_card.scss
+++ b/src/styles/scss/components/_card.scss
@@ -1,5 +1,3 @@
 .card {
-  padding: 24px;
-  border: none;
-  box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.12);
+  @include card-style(24px, 24px);
 }
