--- a/src/styles/scss/helpers/_mixins.scss
+++ b/src/styles/scss/helpers/_mixins.scss
@@ -13,91 +13,40 @@
 }
 
 /** Card */
-@mixin card-rounded-border($padding-y, $padding-x, $background-color) {
+@mixin card-style($padding-y, $padding-x) {
   padding: $padding-y $padding-x;
-  background-color: $background-color;
-  border: 1px solid $background-color;
-  border-radius: 24px;
+  border: none;
+  box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.12);
 }
 
 /** Button */
-@mixin btn-rounded-border(
-  $padding-y,
-  $padding-x,
-  $border-color: transparent,
-  $border-radius: 32px
-) {
+@mixin btn-style($padding-y, $padding-x, $border-color: transparent) {
   padding: $padding-y $padding-x;
   border: 1px solid $border-color;
-  border-radius: $border-radius;
-  transition: 0.5s;
+  box-shadow: none;
 }
 @mixin common-hover($color, $background-color) {
   color: $color;
-  box-shadow: 0 0 20px rgb(45 20 2 / 26%);
-  background-color: rgba($background-color, 75%);
-}
-
-/** Select */
-@mixin select-border($padding-y, $padding-x, $border-radius) {
-  padding: $padding-y $padding-x;
-  border-radius: $border-radius;
-}
-
-/** Dropdown */
-@mixin dropdown-list-border($border-radius) {
-  padding: 0;
-  border: none;
-  border-radius: $border-radius;
-  box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.12);
-}
-@mixin dropdown-item-border($padding-y, $padding-x, $border-radius) {
-  padding: $padding-y $padding-x;
-  border: none;
-  border-radius: $border-radius;
+  background-color: $background-color;
+  box-shadow: none;
 }
 
 /** Colors */
 @mixin bg-color($background-color) {
   background-color: $background-color;
 }
+@mixin border-color($border-color) {
+  border-color: $border-color;
+}
 @mixin text-color($color) {
   color: $color;
 }
 
-/** Icons */
-@mixin icon-size($size) {
-  width: $size;
-  height: $size;
-  mat-icon {
-    width: $size;
-    height: $size;
-  }
-}
-@mixin icon-color($color) {
-  mat-icon {
-    color: $color;
-  }
-}
-
-/** 繼承樣式 - input */
-%input-border {
+/** 繼承樣式 - button */
+%btn-share {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  text-align: left;
-  background-color: $white;
-  color: $gray-100;
-  border: solid 1px $gray-400;
-}
-%common-focus {
-  border: 1px solid $gray-500;
-  box-shadow: 0 0 20px rgb(0 0 0 / 8%);
-}
-%single-ellipsis {
-  text-overflow: ellipsis;
-  display: block;
-  overflow: hidden;
-  white-space: nowrap;
-  width: 90px;
+  gap: 4px;
+  @include font(18px, 0.02em);
+  @include btn-style(12px, 16px);
 }
