--- a/src/styles/scss/helpers/_mixins.scss
+++ b/src/styles/scss/helpers/_mixins.scss
@@ -47,6 +47,6 @@
   display: flex;
   align-items: center;
   gap: 4px;
-  @include font(18px, 0.02em);
+  @include font(16px, 0.02em, 150%);
   @include btn-style(12px, 16px);
 }
