--- a/src/styles/scss/helpers/_mixins.scss
+++ b/src/styles/scss/helpers/_mixins.scss
@@ -44,9 +44,10 @@
 
 /** 繼承樣式 - button */
 %btn-share {
+  @include font(18px, 0.02em, 150%);
+  @include btn-style(12px, 16px);
   display: flex;
   align-items: center;
+  min-width: 120px;
   gap: 4px;
-  @include font(16px, 0.02em, 150%);
-  @include btn-style(16px, 14px);
 }
