chore: change background color, add checkout page

--- a/src/styles/scss/base/_base.scss
+++ b/src/styles/scss/base/_base.scss
@@ -35,7 +35,7 @@ img {
 
 body {
   font-family: Roboto, 'Noto Sans TC', sans-serif, Helvetica, Arial;
-  background-color: #edf2fc;
+  // background-color: #edf2fc;
 }
 
 header {
