--- a/src/styles/scss/base/_base.scss
+++ b/src/styles/scss/base/_base.scss
@@ -34,7 +34,7 @@ img {
 }
 
 body {
-  font-family: Roboto, 'Noto Sans TC', sans-serif, Helvetica, Arial;
+  font-family: 'Poppins', 'Noto Sans TC', sans-serif, Helvetica, Arial;
   // background-color: #edf2fc;
 }
 
