--- a/src/styles/scss/base/_base.scss
+++ b/src/styles/scss/base/_base.scss
@@ -35,6 +35,7 @@ img {
 
 body {
   font-family: 'Poppins', 'Noto Sans TC', sans-serif, Helvetica, Arial;
+  background-color: #efefef;
   // background-color: #edf2fc;
 }
 
