chore: change productDetail style

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,3 +20,4 @@
 @import '/src/styles/scss/components/form';
 // pages
 @import '/src/styles/scss/pages/productsList';
+@import '/src/styles/scss/pages/productDetail';
