feat: update some UX

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,5 +19,6 @@
 @import '/src/styles/scss/components/table';
 @import '/src/styles/scss/components/form';
 // pages
+@import '/src/styles/scss/pages/pageNotFound';
 @import '/src/styles/scss/pages/productsList';
 @import '/src/styles/scss/pages/productDetail';
