--- a/src/styles/scss/base/_base.scss
+++ b/src/styles/scss/base/_base.scss
@@ -84,6 +84,10 @@ main.container-fluid {
   z-index: 9999 !important;
 }
 
-.css-1umw9bq-MuiSvgIcon-root.MuiSvgIcon-root {
+.MuiSvgIcon-root.MuiSvgIcon-fontSizeMedium {
   font-size: 24px;
+}
+
+.MuiButtonBase-root.MuiCheckbox-root {
+  padding: 8px;
 }
