--- a/src/styles/scss/pages/_productDetail.scss
+++ b/src/styles/scss/pages/_productDetail.scss
@@ -10,7 +10,8 @@
 
 .product-image {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   button {
     display: inline-flex;
     padding: 0;
