refactor: 調整路由配置

--- a/src/styles/scss/layout/_content.scss
+++ b/src/styles/scss/layout/_content.scss
@@ -5,6 +5,13 @@
   justify-content: center;
 }
 
+.login-layout {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .object-fit {
   -o-object-fit: cover;
   object-fit: cover;
