fix: 修正路由與 navbar 樣式

--- a/src/styles/scss/layout/_content.scss
+++ b/src/styles/scss/layout/_content.scss
@@ -5,6 +5,11 @@
   justify-content: center;
 }
 
+.content-layout {
+  padding-top: 98px;
+  padding-bottom: 28px;
+}
+
 .login-layout {
   height: 100vh;
   display: flex;
