--- a/src/styles/scss/components/_navbar.scss
+++ b/src/styles/scss/components/_navbar.scss
@@ -12,6 +12,9 @@
 
 .menu-bar {
   box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.12);
+  position: fixed;
+  z-index: 100;
+  width: 100%;
 }
 
 .menu-bar-list {
