refactor: 重構 table 元件

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,5 +20,6 @@
 @import '/src/styles/scss/components/form';
 // pages
 @import '/src/styles/scss/pages/pageNotFound';
+@import '/src/styles/scss/pages/dashboard';
 @import '/src/styles/scss/pages/productsList';
 @import '/src/styles/scss/pages/productDetail';
