--- a/src/styles/scss/components/_navbar.scss
+++ b/src/styles/scss/components/_navbar.scss
@@ -12,17 +12,30 @@
 
 .menu-bar {
   box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.12);
+  background-color: #78a1b1;
+  padding: 0;
   position: fixed;
   z-index: 100;
   width: 100%;
 }
 
-.menu-bar-list {
+.menu-navbar {
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
   gap: 16px;
+  .navbar-list a {
+    @include font(18px, 0.02em, 150%);
+    @include text-color(#f2f6f8);
+    padding: 12px 16px;
+    width: 110px;
+    text-align: center;
+    &:hover {
+      @include bg-color(transparent);
+      @include text-color(#bfd4dd);
+    }
+  }
 }
 
 .MuiBadge-badge.MuiBadge-colorPrimary {
