--- a/src/styles/scss/layout/_content.scss
+++ b/src/styles/scss/layout/_content.scss
@@ -11,10 +11,16 @@
 }
 
 .login-layout {
+  background-image: url(https://images.unsplash.com/photo-1714119486511-17719f033d67?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+  background-size: cover;
+  background-position: bottom;
   height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  h2 {
+    margin-bottom: 48px;
+  }
 }
 
 .object-fit {
