fix: 修正 navbar 購物車數量更新問題

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,7 @@
 @import '/src/styles/scss/components/form';
 // pages
 @import '/src/styles/scss/pages/pageNotFound';
+@import '/src/styles/scss/pages/login';
 @import '/src/styles/scss/pages/dashboard';
 @import '/src/styles/scss/pages/productsList';
 @import '/src/styles/scss/pages/productDetail';
