--- a/src/styles/scss/layout/_content.scss
+++ b/src/styles/scss/layout/_content.scss
@@ -6,7 +6,6 @@
 }
 
 .content-layout {
-  padding-top: 98px;
   padding-bottom: 28px;
 }
 
@@ -29,4 +28,13 @@
 .image-list {
   flex-wrap: wrap;
   gap: 24px 0;
+}
+
+.page-title {
+  background-color: #f5f5f5;
+  padding-top: 106px;
+  text-align: center;
+  padding-bottom: 36px;
+  margin-bottom: 24px;
+  font-size: 36px;
 }
