--- a/src/styles/scss/components/_table.scss
+++ b/src/styles/scss/components/_table.scss
@@ -18,3 +18,17 @@
     object-fit: cover;
   }
 }
+
+.table-text-link {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+
+  .MuiSvgIcon-root.MuiSvgIcon-fontSizeMedium {
+    font-size: 18px;
+  }
+  &:hover {
+    opacity: 0.7;
+  }
+}
