chore: 調整全站樣式與修復局部 bug

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,7 @@
 @import '/src/styles/scss/helpers/mixins';
 // base
 @import '/src/styles/scss/base/base';
+@import '/src/styles/scss/base/mui';
 @import '/src/styles/scss/base/typography';
 // layout
 @import '/src/styles/scss/layout/content';
