--- a/src/styles/scss/base/_base.scss
+++ b/src/styles/scss/base/_base.scss
@@ -13,7 +13,7 @@ h3,
 h4,
 h5,
 h6 {
-  color: #222222;
+  color: $gray-900;
 }
 
 ul {
@@ -25,7 +25,7 @@ ul {
 a {
   display: block;
   text-decoration: none;
-  color: #222222;
+  color: $gray-900;
 }
 
 p {
@@ -47,21 +47,13 @@ header {
 }
 
 footer {
-  background-color: #dfeaee;
+  background-color: $gray-100;
 }
 
 main.container-fluid {
   padding: 16px 60px;
 }
 
-/** Text */
-.text-color-main {
-  @include text-color(#587682);
-  &:hover {
-    @include bg-color(transparent);
-    @include text-color(#3f555d);
-  }
-}
 .text-color-gray-500 {
   @include text-color($gray-500);
 }
@@ -71,44 +63,6 @@ main.container-fluid {
   padding-right: 12px;
 }
 
-.w-8 {
-  width: 8%;
-}
-.w-10 {
-  width: 10%;
-}
-.w-12 {
-  width: 12%;
-}
-.w-15 {
-  width: 15%;
-}
-.w-20 {
-  width: 20%;
-}
-.w-30 {
-  width: 30%;
-}
-
 .my-swal-container {
   z-index: 9999 !important;
-}
-
-.MuiSvgIcon-root.MuiSvgIcon-fontSizeMedium {
-  font-size: 24px;
-}
-
-.MuiButtonBase-root.MuiCheckbox-root {
-  padding: 8px;
-}
-
-.MuiFormControl-root .MuiFormControlLabel-root .MuiCheckbox-root.Mui-checked {
-  color: #78a1b1;
-}
-
-.MuiStepper-root {
-  .MuiSvgIcon-root.Mui-completed,
-  .MuiSvgIcon-root.Mui-active {
-    color: #78a1b1;
-  }
 }
