--- a/src/styles/scss/layout/_content.scss
+++ b/src/styles/scss/layout/_content.scss
@@ -31,6 +31,7 @@
 }
 
 .page-title {
+  font-family: 'Lato', 'LXGW WenKai Mono TC';
   background-color: #f5f5f5;
   padding-top: 106px;
   text-align: center;
