feat: 新增訂單資訊頁面

--- a/src/styles/scss/helpers/_variables.scss
+++ b/src/styles/scss/helpers/_variables.scss
@@ -1,10 +1,4 @@
 /** Color */
-// White
-$white: #ffffff;
-
-// Main
-$main: #1583b1;
-
 /** Blue Scale */
 $blue-100: #bcd0d8;
 $blue-200: #a7c2cc;
@@ -27,9 +21,12 @@ $gray-700: #666666;
 $gray-800: #333333;
 $gray-900: #212121;
 
-/** Ecru Scale */
-$ecru-100: #ffffda;
-$ecru-200: #feebc1;
-$ecru-300: #e4d1a7;
-$ecru-400: #cbb88e;
-$ecru-500: #b19e74;
+/** Brown Scale */
+$brown-100: #ffffda;
+$brown-200: #feebc1;
+$brown-300: #e4d1a7;
+$brown-400: #cbb88e;
+$brown-500: #b19e74;
+
+// White
+$white: #ffffff;
