--- a/src/styles/scss/base/_base.scss
+++ b/src/styles/scss/base/_base.scss
@@ -42,20 +42,41 @@ body {
   line-height: 1.5;
 }
 
+h1 {
+  font-family: 'Alex Brush', serif;
+}
+
 header {
   background-color: #f2f6f8;
 }
 
 footer {
-  background-color: $gray-100;
+  background-color: $blue-700;
+  color: $white;
+  .footer-links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 4px;
+    .link-light .MuiSvgIcon-root.MuiSvgIcon-fontSizeMedium {
+      transition: all 0.3s;
+      @include text-color($white);
+      &:hover {
+        opacity: 0.7;
+      }
+    }
+  }
 }
 
 main.container-fluid {
   padding: 16px 60px;
 }
 
+.text-color-gray-400 {
+  color: $gray-400;
+}
 .text-color-gray-500 {
-  @include text-color($gray-500);
+  color: $gray-500;
 }
 
 .row > * {
