--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,8 @@
 @import '/src/styles/scss/components/form';
 // pages
 @import '/src/styles/scss/pages/pageNotFound';
+@import '/src/styles/scss/pages/footer';
+@import '/src/styles/scss/pages/home';
 @import '/src/styles/scss/pages/login';
 @import '/src/styles/scss/pages/dashboard';
 @import '/src/styles/scss/pages/productsList';
