--- a/src/styles/scss/base/_base.scss
+++ b/src/styles/scss/base/_base.scss
@@ -35,6 +35,7 @@ p {
 img {
   width: 100%;
   height: auto;
+  display: block;
 }
 
 body {
@@ -50,33 +51,9 @@ header {
   background-color: #f2f6f8;
 }
 
-footer {
-  background-color: $blue-700;
-  color: $white;
-  .footer-links {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 4px;
-    .link-light .MuiSvgIcon-root.MuiSvgIcon-fontSizeMedium {
-      transition: all 0.3s;
-      @include text-color($white);
-      &:hover {
-        opacity: 0.7;
-      }
-    }
-  }
-}
-
-main.container-fluid {
-  padding: 16px 60px;
-}
-
-.text-color-gray-400 {
-  color: $gray-400;
-}
-.text-color-gray-500 {
-  color: $gray-500;
+.container {
+  padding-left: 12px;
+  padding-right: 12px;
 }
 
 .row > * {
@@ -85,7 +62,7 @@ main.container-fluid {
 }
 
 .my-swal-container {
-  z-index: 9999 !important;
+  z-index: 99999 !important;
 }
 
 .w-8 {
@@ -105,4 +82,14 @@ main.container-fluid {
 }
 .w-30 {
   width: 30%;
+}
+
+.text-color-gray-400 {
+  color: $gray-400;
+}
+.text-color-gray-500 {
+  color: $gray-500;
+}
+.text-color-gray-600 {
+  color: $gray-600;
 }
