--- a/src/styles/scss/components/_navbar.scss
+++ b/src/styles/scss/components/_navbar.scss
@@ -1,37 +1,45 @@
 nav.navbar {
-  box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 16px rgba(0, 0, 0, 0.3);
   background-color: $white;
   padding: 0;
   position: fixed;
   z-index: 100;
   width: 100%;
+  height: 60px;
+
+  .container-fluid {
+    padding: 0 48px;
+  }
 }
 
-.navbar .navbar-items {
+.navbar-items {
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
   gap: 16px;
+}
 
-  .navbar-list li {
-    border-bottom: 2px solid transparent;
-    &.active .link-gray {
-      color: $blue-600;
-      &:hover {
-        opacity: 1;
-      }
-    }
-    a {
-      padding: 18px 16px;
-      width: 110px;
-      text-align: center;
-    }
-  }
-  .page-items {
-    display: flex;
-    gap: 8px;
-  }
+.navbar-list li {
+  border-bottom: 2px solid transparent;
+}
+
+.navbar-list li.active .link-gray {
+  color: $blue-600;
+}
+
+.navbar-list li.active .link-gray:hover {
+  opacity: 1;
+}
+
+.navbar-list a {
+  padding: 18px 16px;
+  width: 110px;
+  text-align: center;
+}
+
+.page-items {
+  gap: 8px;
 }
 
 .MuiSvgIcon-root.MuiSvgIcon-fontSizeMedium {
@@ -40,4 +48,35 @@ nav.navbar {
 
 .MuiBadge-badge.MuiBadge-colorPrimary {
   background-color: $brown-500;
+}
+
+.MuiPaper-root.MuiDrawer-paper {
+  position: absolute;
+  top: 60px;
+}
+
+.MuiList-root.navbar-dropdown {
+  padding-top: 0;
+  padding-bottom: 0;
+
+  li {
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+  }
+
+  li a {
+    display: contents;
+  }
+
+  li a .MuiButtonBase-root {
+    padding: 16px 48px;
+    width: 100%;
+  }
+}
+
+@media (max-width: 767px) {
+  nav.navbar {
+    z-index: 9999;
+  }
 }
