--- a/src/styles/scss/helpers/_variables.scss
+++ b/src/styles/scss/helpers/_variables.scss
@@ -27,6 +27,10 @@ $brown-200: #feebc1;
 $brown-300: #e4d1a7;
 $brown-400: #cbb88e;
 $brown-500: #b19e74;
+$brown-600: #a18a56;
+$brown-700: #896f35;
+$brown-800: #735e2d;
+$brown-900: #5e4c24;
 
 // White
 $white: #ffffff;
