chore: 加入 aos 動畫

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,8 @@
 @import 'bootstrap/dist/css/bootstrap.min.css';
 // hover.css
 @import 'hover.css/css/hover-min.css';
+// aos
+@import 'aos/dist/aos.css';
 // helpers
 @import '/src/styles/scss/helpers/variables';
 @import '/src/styles/scss/helpers/mixins';
