fix: 禁止 x 軸滾動

--- a/src/styles/scss/base/_base.scss
+++ b/src/styles/scss/base/_base.scss
@@ -41,6 +41,7 @@ img {
 body {
   font-family: 'Lato', 'Noto Sans TC', sans-serif, Helvetica, Arial;
   line-height: 1.5;
+  overflow-x: hidden;
 }
 
 h1 {
