style: 調整邊界間距

--- a/src/styles/scss/pages/_footer.scss
+++ b/src/styles/scss/pages/_footer.scss
@@ -15,7 +15,8 @@
     height: 100%;
   }
   .email-block-content {
-    padding: 48px;
+    padding-top: 48px;
+    padding-bottom: 48px;
     position: relative;
     display: flex;
     flex-direction: column;
