--- a/src/styles/scss/components/_navbar.scss
+++ b/src/styles/scss/components/_navbar.scss
@@ -7,8 +7,8 @@ nav.navbar {
   width: 100%;
   height: 60px;
 
-  .container-fluid {
-    padding: 0 48px;
+  .container {
+    padding: 0;
   }
 }
 
@@ -18,6 +18,10 @@ nav.navbar {
   justify-content: space-between;
   width: 100%;
   gap: 16px;
+  .dropdown-btn button {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
 .navbar-list li {
@@ -78,8 +82,8 @@ nav.navbar {
 @media (max-width: 767px) {
   nav.navbar {
     z-index: 9999;
-    .container-fluid {
-      padding: 0 24px;
+    .container {
+      padding: 0 12px;
     }
     .dropdown-btn {
       button {
