--- a/src/styles/scss/pages/_home.scss
+++ b/src/styles/scss/pages/_home.scss
@@ -1,12 +1,8 @@
-.primary-content-block {
-  margin-bottom: 36px;
-}
-
 .primary-text {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 0 48px;
+  padding: 0 60px;
   font-family: 'Lato', 'LXGW WenKai Mono TC';
 }
 
@@ -25,19 +21,21 @@
   display: none;
 }
 
+.secondary-content-container {
+  background-color: $gray-200;
+}
+
 .secondary-content-items {
   display: grid;
-  gap: 32px;
-  padding: 36px 0;
+  padding-top: 36px;
+  padding-bottom: 36px;
 }
 
 .secondary-content-items li {
   display: flex;
-  padding: 0;
 }
 
 .secondary-content-items img {
-  padding: 0 48px;
   height: 400px;
   -o-object-fit: cover;
   object-fit: cover;
@@ -72,7 +70,8 @@ li.flex-md-row-reverse img {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 36px;
+  padding-top: 36px;
+  padding-bottom: 36px;
   gap: 24px;
 }
 
