--- a/src/styles/scss/base/_base.scss
+++ b/src/styles/scss/base/_base.scss
@@ -38,10 +38,15 @@ img {
   display: block;
 }
 
+html,
+body {
+  overflow-x: hidden;
+  width: 100%;
+}
+
 body {
   font-family: 'Lato', 'Noto Sans TC', sans-serif, Helvetica, Arial;
   line-height: 1.5;
-  overflow-x: hidden;
 }
 
 h1 {
@@ -52,7 +57,8 @@ header {
   background-color: #f2f6f8;
 }
 
-.container {
+.container,
+.container-fluid {
   padding-left: 12px;
   padding-right: 12px;
 }
