--- a/src/styles/scss/components/_navbar.scss
+++ b/src/styles/scss/components/_navbar.scss
@@ -1,14 +1,41 @@
 nav.navbar {
-  box-shadow: 0 0 16px rgba(0, 0, 0, 0.3);
   background-color: $white;
-  padding: 0;
-  position: fixed;
   z-index: 100;
   width: 100%;
-  height: 60px;
-
-  .container {
-    padding: 0;
+  height: auto;
+  padding: 0;
+  position: fixed;
+  box-shadow: 0 0 32px rgba(0, 0, 0, 0.3);
+  .container-fluid {
+    display: block;
+    padding-left: 0;
+    padding-right: 0;
+    background-color: $white;
+  }
+  .navbar-menu-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    h1 a {
+      padding: 12px 0;
+    }
+    .navbar-toggler {
+      padding: 0;
+      border: none;
+    }
+  }
+  .navbar-collapse {
+    box-shadow: 0 6px 6px rgba(0, 0, 0, 0.1);
+  }
+  .nav-link {
+    padding: 16px;
+    text-align: center;
+    color: $blue-600;
+    background-color: $gray-200;
+  }
+  .nav-link:hover {
+    background-color: $blue-100;
   }
 }
 
@@ -54,11 +81,6 @@ nav.navbar {
   background-color: $brown-500;
 }
 
-.MuiPaper-root.MuiDrawer-paper {
-  position: absolute;
-  top: 60px;
-}
-
 .MuiList-root.navbar-dropdown {
   padding-top: 0;
   padding-bottom: 0;
@@ -74,21 +96,37 @@ nav.navbar {
   }
 
   li a .MuiButtonBase-root {
-    padding: 16px 48px;
+    padding: 16px 12px;
     width: 100%;
   }
 }
 
-@media (max-width: 767px) {
+@media (min-width: 992px) {
+  .navbar-nav {
+    display: none;
+  }
+  .navbar-menu {
+    display: flex;
+    align-items: center;
+    a {
+      transition: all 0.3s;
+      padding: 16px;
+    }
+    a:hover {
+      color: $blue-600;
+    }
+  }
+}
+@media (max-width: 991px) {
   nav.navbar {
     z-index: 9999;
-    .container {
-      padding: 0 12px;
-    }
     .dropdown-btn {
       button {
         width: 100%;
       }
     }
+  }
+  .navbar-menu {
+    display: none;
   }
 }
