--- a/src/styles/scss/helpers/_variables.scss
+++ b/src/styles/scss/helpers/_variables.scss
@@ -32,5 +32,11 @@ $brown-700: #896f35;
 $brown-800: #735e2d;
 $brown-900: #5e4c24;
 
+/** State Scale */
+$success-100: #ecfad0;
+$success-200: #00623f;
+$danger-100: #fef3ef;
+$danger-200: #cd2745;
+
 // White
 $white: #ffffff;
