--- a/src/styles/scss/pages/_productDetail.scss
+++ b/src/styles/scss/pages/_productDetail.scss
@@ -41,7 +41,7 @@
 }
 
 @media (max-width: 575px) {
-  .page-title {
+  .page-title.page-title-mb-0 {
     margin-bottom: 0;
   }
   .product-detail-container {
